crates/eslint_comments/src/snapshots/oxlint_plugins_eslint_comments__directive__tests__extracts_descriptions.snap
---
source: crates/eslint_comments/src/directive.rs
expression: parsed
---
[
    Some(
        ParsedDirective {
            kind: "eslint-disable",
            value: "eqeqeq",
            description: Some(
                "because reasons",
            ),
        },
    ),
    Some(
        ParsedDirective {
            kind: "eslint-disable",
            value: "",
            description: Some(
                "a",
            ),
        },
    ),
    Some(
        ParsedDirective {
            kind: "eslint-disable",
            value: "foo",
            description: Some(
                "triple",
            ),
        },
    ),
    Some(
        ParsedDirective {
            kind: "eslint-disable",
            value: "foo -short",
            description: None,
        },
    ),
]
