crates/eslint_comments/src/snapshots/oxlint_plugins_eslint_comments__directive__tests__rejects_non_directives.snap
---
source: crates/eslint_comments/src/directive.rs
expression: parsed
---
[
    None,
    None,
    None,
    None,
    None,
]
